主图指标卡：增加白色样式展示（毛利率卡），网格改为5列

--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -32,7 +32,7 @@
 
         .indicator-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(5, 1fr);
             gap: 16px;
             margin: 16px 0;
             padding: 0 14px;
@@ -588,6 +588,11 @@
             <div class="label">退货率</div>
             <div class="value"><span class="value-num">2.3</span><span class="suffix">%</span></div>
             <div class="trend trend-up">↑ 0.5% 较上月</div>
+        </div>
+        <div class="indicator-card">
+            <div class="label">毛利率</div>
+            <div class="value"><span class="value-num">42.6</span><span class="suffix">%</span></div>
+            <div class="trend trend-flat">— 与上月持平</div>
         </div>
     </div>
     <!-- 代码面板 -->
