--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -33,26 +33,26 @@
         .indicator-grid {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
-            gap: 16px;
+            gap: 10px;
             margin: 16px 0;
             padding: 0 14px;
             box-sizing: border-box;
         }
         @media (max-width: 768px) {
-            .indicator-grid { grid-template-columns: repeat(2, 1fr); gap: 12px; margin: 12px 0; padding: 0 10px; }
+            .indicator-grid { grid-template-columns: repeat(2, 1fr); gap: 8px; margin: 12px 0; padding: 0 10px; }
         }
 
-        /* 卡片统一：固定高度宽度、圆角8px、内边距20px（参考大小）、阴影 0 1px 2px，无顶部横杠 */
+        /* 卡片统一：更大内边距与高度、圆角8px、阴影 0 1px 2px，无顶部横杠 */
         .indicator-card {
             background: #fff;
             border-radius: 8px;
-            padding: 20px;
+            padding: 26px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
             border: 1px solid #F0F0F0;
             position: relative;
             overflow: hidden;
-            min-height: 130px;
-            height: 130px;
+            min-height: 152px;
+            height: 152px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -61,35 +61,35 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
         }
         @media (max-width: 768px) {
-            .indicator-card { padding: 16px; border-radius: 8px; min-height: 120px; height: 120px; }
+            .indicator-card { padding: 20px; border-radius: 8px; min-height: 140px; height: 140px; }
         }
         .indicator-card .label {
-            font-size: 13px;
+            font-size: 14px;
             color: #8C8C8C;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
             font-weight: 400;
         }
-        /* 数值行统一：数字 28px/600（参考大小更大），前缀与单位 14px/400，同字体同基线对齐 */
+        /* 数值行统一：数字 32px/600，前缀与单位 15px/400，同字体同基线对齐 */
         .indicator-card .value {
             display: flex;
             align-items: baseline;
             flex-wrap: wrap;
             font-family: inherit;
-            font-size: 28px;
+            font-size: 32px;
             font-weight: 600;
             color: #262626;
             line-height: 1;
-            margin-bottom: 6px;
+            margin-bottom: 8px;
         }
         .indicator-card .value .value-num {
-            font-size: 28px;
+            font-size: 32px;
             font-weight: 600;
             color: inherit;
             line-height: 1;
         }
         .indicator-card .value .value-prefix,
         .indicator-card .value .suffix {
-            font-size: 14px;
+            font-size: 15px;
             font-weight: 400;
             color: #8C8C8C;
             margin-left: 2px;
@@ -98,17 +98,17 @@
         }
         .indicator-card .value .value-prefix { margin-left: 0; margin-right: 2px; }
         .indicator-card .trend {
-            margin-top: 8px;
-            font-size: 12px;
+            margin-top: 10px;
+            font-size: 13px;
             font-weight: 400;
         }
         @media (max-width: 768px) {
-            .indicator-card .value { font-size: 24px; }
-            .indicator-card .value .value-num { font-size: 24px; }
-            .indicator-card .label { font-size: 12px; }
-            .indicator-card .trend { font-size: 11px; }
+            .indicator-card .value { font-size: 26px; }
+            .indicator-card .value .value-num { font-size: 26px; }
+            .indicator-card .label { font-size: 13px; }
+            .indicator-card .trend { font-size: 12px; }
             .indicator-card .value .value-prefix,
-            .indicator-card .value .suffix { font-size: 13px; }
+            .indicator-card .value .suffix { font-size: 14px; }
         }
         .trend-up { color: #389E0D; }
         .trend-down { color: #CF1322; }
@@ -412,15 +412,15 @@
         }
         .scenario-block { margin-bottom: 24px; min-width: 0; }
         .scenario-block .spec-title { margin-bottom: 8px; }
-        /* 确保 scenario-row 中的指标卡高度一致（参考大小） */
+        /* 确保 scenario-row 中的指标卡高度与主图一致 */
         .scenario-row .indicator-card {
-            min-height: 130px;
-            height: 130px;
+            min-height: 152px;
+            height: 152px;
         }
         @media (max-width: 768px) {
             .scenario-row .indicator-card {
-                min-height: 120px;
-                height: 120px;
+                min-height: 140px;
+                height: 140px;
             }
         }
 
