紧凑样式：现代渐变图标、精致阴影与排版、悬停动效

--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -151,31 +151,75 @@
         .variant-row {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 16px;
+            gap: 14px;
             margin: 16px 0;
         }
         @media (max-width: 768px) { .variant-row { grid-template-columns: 1fr; } }
 
+        /* 紧凑样式：现代渐变图标 + 精致阴影与排版 */
         .indicator-compact {
             background: #fff;
-            border-radius: 8px;
-            padding: 20px;
+            border-radius: 12px;
+            padding: 24px;
             display: flex;
             align-items: center;
-            gap: 16px;
-            border: 1px solid #F0F0F0;
-            box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+            gap: 20px;
+            border: 1px solid rgba(0,0,0,0.06);
+            box-shadow: 0 2px 8px rgba(0,0,0,0.04), 0 1px 2px rgba(0,0,0,0.06);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+        .indicator-compact:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 24px rgba(0,0,0,0.08), 0 2px 8px rgba(0,0,0,0.06);
         }
         .indicator-compact .icon-box {
-            width: 48px; height: 48px;
-            border-radius: 8px;
+            width: 56px; height: 56px;
+            border-radius: 14px;
             display: flex; align-items: center; justify-content: center;
-            font-size: 20px;
+            font-size: 26px;
             flex-shrink: 0;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+        }
+        .indicator-compact .icon-box.icon-blue {
+            background: linear-gradient(135deg, #1677FF 0%, #4096FF 50%, #69B1FF 100%);
+        }
+        .indicator-compact .icon-box.icon-green {
+            background: linear-gradient(135deg, #389E0D 0%, #52C41A 50%, #73D13D 100%);
+        }
+        .indicator-compact .icon-box.icon-amber {
+            background: linear-gradient(135deg, #D46B08 0%, #FA8C16 50%, #FFA940 100%);
         }
         .indicator-compact .content { flex: 1; min-width: 0; }
-        .indicator-compact .label { font-size: 13px; color: #8C8C8C; margin-bottom: 6px; font-weight: 400; }
-        .indicator-compact .value { font-size: 24px; font-weight: 600; color: #262626; }
+        .indicator-compact .label {
+            font-size: 14px;
+            color: #595959;
+            margin-bottom: 8px;
+            font-weight: 500;
+            letter-spacing: 0.02em;
+        }
+        .indicator-compact .value {
+            display: flex;
+            align-items: baseline;
+            flex-wrap: wrap;
+            font-size: 26px;
+            font-weight: 700;
+            color: #141414;
+            letter-spacing: -0.02em;
+            line-height: 1.2;
+        }
+        .indicator-compact .value .value-prefix {
+            font-size: 16px;
+            font-weight: 600;
+            color: #595959;
+            margin-right: 4px;
+        }
+        .indicator-compact .value .value-num { font-size: 26px; font-weight: 700; color: inherit; }
+        .indicator-compact .value .value-unit {
+            font-size: 15px;
+            font-weight: 500;
+            color: #8C8C8C;
+            margin-left: 2px;
+        }
 
         .indicator-with-sub {
             background: #fff;
@@ -623,24 +667,24 @@ import { ArrowUpOutlined, ArrowDownOutlined } from '@ant-design/icons';
     <div class="spec-title">紧凑样式</div>
     <div class="variant-row">
         <div class="indicator-compact">
-            <div class="icon-box" style="background: #E8F3FF;">💰</div>
+            <div class="icon-box icon-blue">💰</div>
             <div class="content">
                 <div class="label">总收入</div>
-                <div class="value">¥ 12.8万</div>
+                <div class="value"><span class="value-prefix">¥</span><span class="value-num">12.8</span><span class="value-unit">万</span></div>
             </div>
         </div>
         <div class="indicator-compact">
-            <div class="icon-box" style="background: #E6F7F0;">👥</div>
+            <div class="icon-box icon-green">👥</div>
             <div class="content">
                 <div class="label">新增用户</div>
-                <div class="value">2,340</div>
+                <div class="value"><span class="value-num">2,340</span></div>
             </div>
         </div>
         <div class="indicator-compact">
-            <div class="icon-box" style="background: #FFF7E6;">📦</div>
+            <div class="icon-box icon-amber">📦</div>
             <div class="content">
                 <div class="label">订单数</div>
-                <div class="value">1,580</div>
+                <div class="value"><span class="value-num">1,580</span></div>
             </div>
         </div>
     </div>
